ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - hosts:
    - crsmithdev.com
    secretName: crsmithdev-tls
  rules:
  - host: crsmithdev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blog
          servicePort: 80
